classDiagram
    %% Domain Models
    class GitHubRepository {
        +Guid Id
        +string Owner
        +string Name
        +string CloneUrl
        +DateTime LastAnalyzedCommitDate
        +string GetFullName()
        +string GetLocalPath()
    }

    class CommitLineCount {
        +Guid Id
        +Guid RepositoryId
        +string CommitSha
        +DateTime CommitDate
        +int TotalLines
        +int LinesAdded
        +int LinesRemoved
        +Dictionary~string, int~ LinesByFileType
        +int GetNetLines()
        +bool HasFileType(string extension)
    }

    %% Application DTOs
    class CommitStatsDto {
        +string Sha
        +string CommitSha
        +DateTime CommitDate
        +int TotalLines
        +int LinesAdded
        +int LinesRemoved
        +Dictionary~string, int~ LinesByFileType
        +string CommitMessage
        +string AuthorName
        +string AuthorEmail
    }

    class DailyLineCountDto {
        +DateTime Date
        +int TotalLines
        +int LinesAdded
        +int LinesRemoved
        +int NetLines
        +int CommitCount
        +Dictionary~string, int~ LinesByFileType
    }

    class GitHubRepoStatsDto {
        +GitHubRepository Repository
        +int CommitCount
        +List~CommitLineCount~ CommitLineCounts
        +Dictionary~string, int~ LineCounts
        +int GetTotalLinesOfCode()
        +DateTime GetLastCommitDate()
    }

    class RepositoryLineCountHistoryDto {
        +Guid RepositoryId
        +string RepositoryName
        +string Owner
        +IEnumerable~DailyLineCountDto~ DailyLineCounts
        +string GetFullRepositoryName()
        +int GetTotalDays()
    }

    %% Infrastructure Entities
    class GitHubRepositoryEntity {
        +string PartitionKey
        +string RowKey
        +DateTimeOffset? Timestamp
        +ETag ETag
        +Guid Id
        +string Owner
        +string Name
        +string CloneUrl
        +DateTime LastAnalyzedCommitDate
        +GitHubRepository ToDomainModel()
        +GitHubRepositoryEntity FromDomainModel(GitHubRepository)$
    }

    class CommitLineCountEntity {
        +string PartitionKey
        +string RowKey
        +DateTimeOffset? Timestamp
        +ETag ETag
        +Guid Id
        +Guid RepositoryId
        +string CommitSha
        +DateTime CommitDate
        +int TotalLines
        +int LinesAdded
        +int LinesRemoved
        +string LinesByFileTypeJson
        +CommitLineCount ToDomainModel()
        +CommitLineCountEntity FromDomainModel(CommitLineCount)$
    }

    %% Client Models
    class RepositoryPageState {
        +string NewRepoCloneUrl
        +string AddRepoMessage
        +string ErrorMessage
        +bool IsLoadingRepositories
        +bool IsAddingRepository
        +string ProgressMessage
        +int ProgressPercentage
        +List~GitHubRepository~ Repositories
        +HashSet~Guid~ ShowAllCommitsFor
        +void ClearMessages()
        +void SetProgress(string, int)
    }

    class RepositoryAnalysisResult {
        +Guid RepositoryId
        +string RepositoryName
        +List~CommitLineCount~ Commits
        +int GetTotalCommits()
        +DateTime GetLatestCommitDate()
    }

    %% Interfaces
    class IGitHubService {
        <<interface>>
        +Task~string~ CloneRepositoryAsync(string, string)
        +Task~string~ PullRepositoryAsync(string)
        +Task~IEnumerable~(string, DateTimeOffset)~~ GetCommitsAsync(string, DateTime?)
        +Task~Dictionary~string, int~~ CountLinesInCommitAsync(string, string, IEnumerable~string~)
        +Task~IEnumerable~CommitStatsDto~~ GetCommitStatsAsync(string, DateTime?)
        +Task~long~ GetTotalLinesOfCodeAsync(string, IEnumerable~string~)
        +Task CheckConnectionAsync()
    }

    class IRepositoryDataService {
        <<interface>>
        +Task AddRepositoryAsync(GitHubRepository)
        +Task UpdateRepositoryAsync(GitHubRepository)
        +Task~GitHubRepository?~ GetRepositoryByIdAsync(Guid)
        +Task~GitHubRepository?~ GetRepositoryByOwnerAndNameAsync(string, string)
        +Task~IEnumerable~GitHubRepository~~ GetAllRepositoriesAsync()
        +Task AddCommitLineCountAsync(CommitLineCount)
        +Task~IEnumerable~CommitLineCount~~ GetCommitLineCountsByRepositoryIdAsync(Guid)
        +Task~bool~ CommitExistsAsync(Guid, string)
        +Task DeleteCommitLineCountsForRepositoryAsync(Guid)
        +Task CheckConnectionAsync()
    }

    class IRepositoryService {
        <<interface>>
        +Task~IEnumerable~GitHubRepository~~ GetAllRepositoriesAsync()
        +Task~GitHubRepoStatsDto?~ GetRepositoryByOwnerAndNameAsync(string, string)
        +Task~GitHubRepository~ AddRepositoryAsync(string, string, string)
        +Task AnalyzeRepositoryCommitsAsync(Guid)
        +Task UpdateRepositoryAsync(GitHubRepository)
        +Task~IEnumerable~CommitLineCount~~ GetLineCountsForRepositoryAsync(Guid)
        +Task~IEnumerable~DailyLineCountDto~~ GetLineCountHistoryAsync(Guid, int)
        +Task~IEnumerable~RepositoryLineCountHistoryDto~~ GetAllRepositoriesLineCountHistoryAsync(int)
        +Task~IEnumerable~string~~ GetConfiguredFileExtensionsAsync()
    }

    %% Relationships
    GitHubRepository "1" --> "*" CommitLineCount
    CommitLineCount "1" --> "1" CommitStatsDto
    GitHubRepository "1" --> "1" GitHubRepoStatsDto
    GitHubRepoStatsDto "1" --> "*" CommitLineCount
    RepositoryLineCountHistoryDto "1" --> "*" DailyLineCountDto
    DailyLineCountDto "*" --> "*" CommitLineCount
    
    %% Infrastructure Mappings
    GitHubRepository "1" --> "1" GitHubRepositoryEntity
    CommitLineCount "1" --> "1" CommitLineCountEntity
    
    %% Client State
    RepositoryPageState "1" --> "*" GitHubRepository
    RepositoryAnalysisResult "1" --> "*" CommitLineCount

    %% Service Dependencies
    IGitHubService --> CommitStatsDto
    IGitHubService --> GitHubRepository
    IRepositoryDataService --> GitHubRepository
    IRepositoryDataService --> CommitLineCount
    IRepositoryService --> GitHubRepository
    IRepositoryService --> CommitLineCount
    IRepositoryService --> DailyLineCountDto
    IRepositoryService --> GitHubRepoStatsDto
    IRepositoryService --> RepositoryLineCountHistoryDto


